feat: implementando o readme e os seeders pro ambiente de dev
